*postfix_exporter-0.2.0-r1 (29 Sep 2020)

  29 Sep 2020; Manuel Friedli <manuel@gentoo.org>
  +postfix_exporter-0.2.0-r1.ebuild, -postfix_exporter-0.2.0.ebuild:
  app-metrics/postfix_exporter: Make v0.2.0 GLEP 81 conformant

*postfix_exporter-0.2.0 (19 Nov 2019)

  19 Nov 2019;  <manuel@gentoo.org> +files/postfix_exporter-1.confd,
  +postfix_exporter-0.2.0.ebuild:
  app-metrics/postfix_exporter: Add ebuild for version 0.2.0.

*postfix_exporter-0.1.2 (19 Nov 2019)

  19 Nov 2019;  <manuel@gentoo.org> +files/postfix_exporter.confd,
  +files/postfix_exporter.initd, +files/postfix_exporter.logrotated,
  +files/postfix_exporter.service, +metadata.xml,
  +postfix_exporter-0.1.2.ebuild:
  app-metrics/postfix_exporter: Add ebuild with systemd unit file.