@@ -16,9 +16,7 @@ DIST github.com-prometheus-client_golang-f504d69affe11ec1ccb2e5948127f86878c9fd5
 DIST github.com-prometheus-client_model-99fa1f4be8e564e8a6b613da7fa6f46c9edafc6c.tar.gz 54718 BLAKE2B 1dec6ac40fc5103117c2cf0538e138fc57c7b9795516c530b3c0dc2f5983f88c2d0eb1b094859815397fb14d50648240556fb6b11a8935586eca29eb66b4e958 SHA512 99bc72ca0887df4c7ab5a006af9c59afdc1281fe6d6d17f2897428a06da80d63d6ccd476deacb933cb208357500f14a7b96e99b9c5a7582e65a7aae87aaf2c50
 DIST github.com-prometheus-common-38c53a9f4bfcd932d1b00bfc65e256a7fba6b37a.tar.gz 63007 BLAKE2B a62f727ef9dd42d52f495ab7449cbafbe7c7fcdb1bc171df97c40348dcb7fe12788223d7a2aea3398cae7dd17ec73ae6349b5e5f35f4785f2796cc9a16c2d420 SHA512 4f1ab6cffc309a00ed68959b9372e1d3ea4f8d597b8c462a4e365cf22737245e601b8bda0764bbd1f0172d773805d16e90a8aa90cb95e9462e35320043e04060
 DIST github.com-prometheus-procfs-780932d4fbbe0e69b84c34c20f5c8d0981e109ea.tar.gz 56873 BLAKE2B 31ae12d51b6a28c285bd5854b137d2634499d0db3c2c65c0404ca5a902ffec2e9bf689261ea51c2fe1643733f09a780c437f7a7899a5e6c3e3d100a36e07b897 SHA512 a548c6bc71456c9878cb34ad1514d92c8737e01b555e953f848cc1ae7944424b06a14a8ab0c6de4d99dbb189a0f29e2bb9ae09b5adffc327c28f5c50c2819892
-DIST postfix_exporter-0.1.2.tar.gz 11552 BLAKE2B 987c81482fc984e8f6c870fdaf7ce2ef67b3fa66e5782713a645d35b76a1bde1dde97a79705569d1423a9356309d0b7240c77dba386127e8a5035990220d2a62 SHA512 579793281dedd858538ab9a931e0003cfc9989204ebf4352dd4860e5a7f62b919d77a9e0facb9daff6706771010f9e807061dace8cb88928635d55111c7c482a
 DIST postfix_exporter-0.2.0.tar.gz 12119 BLAKE2B 3c5b28f31e38bbd28dc4f5d5d7f25db0711595698842e0629e6d5336e80bc22d93ebee35533b94d3ebc07eb48ab9da8c31e7ac0cd759eb3e20fa0d90329a81c4 SHA512 a8e5be3b9dca47111f32981f112e11f2aa5976fc37ca8a1a64e03ea732fa9d3d6963ce03e401b908485097556fcdfb7ef7276372e8a068aab719910f1a9c346f
-EBUILD postfix_exporter-0.1.2.ebuild 1851 BLAKE2B 101c64cdf667044ff1cd43cdf5500386c4e3d26de962c6e25fd638422f1d1d86ad012ba51ea8421e884ab97efc59a4e8e0a6c5b2d5df5dcc6b22cb50a579bfdc SHA512 eafd06530a5bd5344801d7ed94622ce373372a2b31ab456f50164ae19387c4bf49e8944cbbcb9a792458f28ce7d05f9a959a60d2c5176f16b7997ab215beb695
 EBUILD postfix_exporter-0.2.0-r1.ebuild 2132 BLAKE2B f5b8ad941c863c494d00ea67ec4a5e5e1ed2d73ce6936c5addef7a2502aa84ef8aa92f369b1de92f26eebb9e1fa8cd667409204b1da6fed4578966fda83585d9 SHA512 b47e792218a73a30b9982e409766ffb0d0bfd7498e511fee6aa7b5c4fbb8a00b474b0f2db5f06c7fe5276d101f29f1e57df6753e0d9168e1737c10b9d7cc7bce
-MISC ChangeLog 756 BLAKE2B 34804d565adae5adc83ecb4abc287f5e4db09fac220e198e793ea732aba212cfeddaa3417073d654e1e3529196ca707a15dd2c7990e9b255062bd20aa4a1192c SHA512 069a2bf360efc20d90966aa90a15f22b6b43b298e477d79e219e2c273db5ed574b2ed6eafc5b4f32d9a1ea95b361de76b33103fd810f507b44d24cd1dd80c4d3
+MISC ChangeLog 890 BLAKE2B de6961b87add10ea0b2597276ccf184a88fbe169bbfb1a30e17e48e8bfe5f35213f48a7fa0b597de95465cd9519370ceb81435eeba728618d910eecbd4e77dd3 SHA512 9b227ee69673fe8b7807a07af530d5e10a8840e65f93aac77be720632f11b117f5b2e9278947e6f81ed98afdd5354d07a0c23380ff5ddb4752a107fb5f8add7a
 MISC metadata.xml 255 BLAKE2B 1132f0657024f17717e5191a4992978685715f9abb96052db6399468506deaa85454efcaf58c7dcebfe5e1cf8948c767a7b001832d50c7d9dc162b0ff1395361 SHA512 36fb59a02d322553d6bfad2deeff884cc782c54bbb01a3fb344767fb43536905c43950df368e645d08ba9c48f3ec13c05b1d3c827fa12581c164623d2c174d73
