@@ -1,3 +1,7 @@
+  29 Sep 2020; Manuel Friedli <manuel@gentoo.org>
+  -postfix_exporter-0.1.2.ebuild:
+  app-metrics/postfix_exporter: Purge old ebuild
+
 *postfix_exporter-0.2.0-r1 (29 Sep 2020)
 
   29 Sep 2020; Manuel Friedli <manuel@gentoo.org>
